--- a/index.html
+++ b/index.html
@@ -3,10 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student Info</title>
+    <title>Объединенный сайт</title>
+    <!-- Подключение CSS -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<p>Мудрова Дарія, група 519 B</p>
-<p>Mudrova Daria, group 519 B</p>
+    <h1>Добро пожаловать на сайт!</h1>
+    <!-- Форма -->
+    <form id="contactForm">
+        <label for="name">Имя:</label>
+        <input type="text" id="name" name="name" required>
+        <br>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
+        <br>
+        <label for="message">Сообщение:</label>
+        <textarea id="message" name="message"></textarea>
+        <br>
+        <button type="submit">Отправить</button>
+    </form>
+    <!-- Подключение JavaScript -->
+    <script src="htt2.js"></script>
 </body>
 </html>
+
